services/vpc/vpcRouting.yaml
AWSTemplateFormatVersion: '2010-09-09'
Metadata:
  License: Apache-2.0
Description: This template sets up routing for VPC
Parameters:
  PrimaryVpcId:
    Description: Primary VPC Id 
    Type: AWS::EC2::VPC::Id
  PublicSubnetAZAId:
    Description: Public subnet in AZ A
    Type: String
  PublicSubnetAZBId:
    Description: Public subnet in AZ B
    Type: String
  PrivateSubnetAZAId:
    Description: Private subnet in AZ A
    Type: String
  PrivateSubnetAZBId:
    Description: Private subnet in AZ B
    Type: String
Mappings:
  RegionMapPrefixList:
    us-west-1:
      S3: pl-6ba54002
      DynamoDB: pl-6ea54007
    us-west-2:
      S3: pl-68a54001
      DynamoDb: pl-00a54069
Resources:
  PublicSubnetRouteTableAZA:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref PrimaryVpcId
      Tags:
        - Key: Project
          Value: Alpha
        - Key: Owner
          Value: foo@bar.com
  PublicSubnetRouteTableAZB:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref PrimaryVpcId
      Tags:
        - Key: Project
          Value: Alpha
        - Key: Owner
          Value: foo@bar.com
  PrivateSubnetRouteTableAZA:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref PrimaryVpcId
      Tags:
        - Key: Project
          Value: Alpha
        - Key: Owner
          Value: foo@bar.com
  PrivateSubnetRouteTableAZB:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref PrimaryVpcId
      Tags:
        - Key: Project
          Value: Alpha
        - Key: Owner
          Value: foo@bar.com
  PublicRouteTableAssociationAZA:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicSubnetRouteTableAZA
      SubnetId: !Ref PublicSubnetAZAId
  PublicRouteTableAssociationAZB:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicSubnetRouteTableAZB
      SubnetId: !Ref PublicSubnetAZBId
  PrivateRouteTableAssociationAZA:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateSubnetRouteTableAZA
      SubnetId: !Ref PrivateSubnetAZAId
  PrivateRouteTableAssociationAZB:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateSubnetRouteTableAZB
      SubnetId: !Ref PrivateSubnetAZBId
  VpcIGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Project
          Value: Alpha
        - Key: Owner
          Value: foo@bar.com
  VpcIGWAssociation:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref VpcIGW
      VpcId: !Ref PrimaryVpcId
  NatEIPAZA:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
    DependsOn: VpcIGW
  NatGWAZA:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatEIPAZA.AllocationId
      SubnetId: !Ref PublicSubnetAZAId
      Tags:
        - Key: Project
          Value: Alpha
        - Key: Owner
          Value: foo@bar.com
  NatEIPAZB:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
    DependsOn: VpcIGW
  NatGWAZB:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatEIPAZB.AllocationId
      SubnetId: !Ref PublicSubnetAZBId
      Tags:
        - Key: Project
          Value: Alpha
        - Key: Owner
          Value: foo@bar.com
  IGWRouteAZA:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref VpcIGW
      RouteTableId: !Ref PublicSubnetRouteTableAZA
    DependsOn:
      - VpcIGWAssociation
  IGWRouteAZB:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref VpcIGW
      RouteTableId: !Ref PublicSubnetRouteTableAZB
    DependsOn:
      - VpcIGWAssociation
  NatGWRouteAZA:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGWAZA
      RouteTableId: !Ref PrivateSubnetRouteTableAZA
  NatGWRouteAZB:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGWAZB
      RouteTableId: !Ref PrivateSubnetRouteTableAZB
  S3Endpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      RouteTableIds:
        - !Ref PublicSubnetRouteTableAZA 
        - !Ref PublicSubnetRouteTableAZB
        - !Ref PrivateSubnetRouteTableAZA 
        - !Ref PrivateSubnetRouteTableAZB
      ServiceName: !Join
        - ''
        - - com.amazonaws.
          - !Ref 'AWS::Region'
          - .s3
      VpcId: !Ref PrimaryVpcId
  VpcEndpointSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: VpcEndpointSecurityGroup
      GroupDescription: Vpc endpoint SG 
      VpcId: 
        Fn::ImportValue: PrimaryVpcId
      SecurityGroupIngress:
      - IpProtocol: tcp
        Description: https to IpSpace
        FromPort: 443
        ToPort: 443
        CidrIp: 
          Fn::ImportValue: IpSpace
  CloudformationEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PrivateDnsEnabled: true
      SecurityGroupIds:
        - !Ref VpcEndpointSecurityGroup
      SubnetIds:
        - !Ref PrivateSubnetAZAId
        - !Ref PrivateSubnetAZBId
      ServiceName: !Join
        - ''
        - - com.amazonaws.
          - !Ref 'AWS::Region'
          - .cloudformation
      VpcEndpointType: Interface
      VpcId: !Ref PrimaryVpcId
  CloudWatchEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PrivateDnsEnabled: true
      SecurityGroupIds:
        - !Ref VpcEndpointSecurityGroup
      SubnetIds:
        - !Ref PrivateSubnetAZAId
        - !Ref PrivateSubnetAZBId
      ServiceName: !Join
        - ''
        - - com.amazonaws.
          - !Ref 'AWS::Region'
          - .monitoring
      VpcEndpointType: Interface
      VpcId: !Ref PrimaryVpcId
  CloudWatchLogsEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PrivateDnsEnabled: true
      SecurityGroupIds:
        - !Ref VpcEndpointSecurityGroup
      SubnetIds:
        - !Ref PrivateSubnetAZAId
        - !Ref PrivateSubnetAZBId
      ServiceName: !Join
        - ''
        - - com.amazonaws.
          - !Ref 'AWS::Region'
          - .logs
      VpcEndpointType: Interface
      VpcId: !Ref PrimaryVpcId
  CloudWatchEventsEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PrivateDnsEnabled: true
      SubnetIds:
        - !Ref PrivateSubnetAZAId
        - !Ref PrivateSubnetAZBId
      ServiceName: !Join
        - ''
        - - com.amazonaws.
          - !Ref 'AWS::Region'
          - .events
      VpcEndpointType: Interface
      VpcId: !Ref PrimaryVpcId
Outputs:
  VpcIGWId:
    Description: IGW Id
    Value: !Ref VpcIGW
    Export:
      Name: VpcIGWId
  NatGWAZAId:
    Description: NatGateway Id
    Value: !Ref NatGWAZA
    Export:
      Name: NatGWAZAId
  NatGWAZBId:
    Description: NatGateway Id
    Value: !Ref NatGWAZB
    Export:
      Name: NatGWAZBId
  S3PrefixList:
    Description: S3 Prefix list
    Value: !FindInMap [RegionMapPrefixList, !Ref 'AWS::Region', S3]
    Export:
      Name: S3PrefixList
  DynamoDbPrefixList:
    Description: DynamoDb Prefix list
    Value: !FindInMap [RegionMapPrefixList, !Ref 'AWS::Region', DynamoDb]
    Export:
      Name: DynamoDbPrefixList
